# HumanLoop

./: .gitignore  DEBUGGING.md  HANDOFF.md  README.md  REGRESSION.md  TESTING.md  pyproject.toml
Tracking/Task-0001/: BUG-0001.md  PLAN.md  TASK.md
Tracking/Task-0001/Testing/: PASS-AUDIT-0001.md  PASS-AUDIT-0002.md  PASS-AUDIT-0003.md  PASS-AUDIT-0004.md  PASS-AUDIT-0005.md  README.md  REGRESSION-RUN-0001.md
Tracking/task-0001/: HANDOFF.md  PLAN.md  README.md  RESEARCH.md  TASK.md
Tracking/task-0001/Testing/: BUG1.md  README.md  REGRESSION-RUN-1.md  pass_1_audit.md  pass_2_audit.md  pass_3_audit.md  pass_4_audit.md  pass_5_audit.md
app/: __init__.py  config.py  db.py  desktop.py  inbox.py  main.py  models.py
app/api/: __init__.py  inbox.py  prompts.py
app/repo/: __init__.py  prompts.py
app/static/: manifest.webmanifest
app/templates/: inbox.html
app/templates/partials/: current_prompt.html  queue_rail.html
scripts/: enqueue-sample-prompt.ps1  generate-app-icons.ps1  start-humanloop-desktop.ps1
tests/: conftest.py  test_desktop.py  test_inbox_ui.py  test_ingest.py  test_queue_api.py  test_release_readiness.py
tests/integration/: conftest.py  test_desktop_clipboard.py  test_live_inbox_workflow.py  test_live_localhost_api.py  test_live_smoke_script.py
