[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "humanloop"
version = "0.1.0"
description = "Local prompt inbox MVP for manual ChatGPT handoff."
readme = "Tracking/task-0001/TASK.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1",
    "jinja2>=3.1,<4",
    "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.4,<9",
]

[project.scripts]
humanloop = "app.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "templates/partials/*.html"]
